Tried adding 'typing...' feature. Failed!

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <body>
   <h2>GhostChat 👻</h2>
   <ul id="messages"></ul>
+  <p id="typing-indicator" style="font-style: italic; color: gray;"></p>
   <input id="msgInput" autocomplete="off" placeholder="Type something..." />
   <button onclick="sendMessage()">Send</button>
 
