--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     #messages li { padding: 5px 10px; border-bottom: 1px solid #444; }
     input { padding: 10px; width: 80%; }
     button { padding: 10px; }
+
   </style>
 </head>
 <body>
@@ -20,4 +21,5 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 </body>
+<!-- <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script> -->
 </html>
